beast_back/examples/backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: beast
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
